--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://roadblock37:ip6gtfm6bPOWtw5h@roadblock.4jtwsyh.mongodb.net/TasksDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://roadblock37:ip6gtfm6bPOWtw5h@roadblock.4jtwsyh.mongodb.net/entertainmentDB?retryWrites=true&w=majority
